--
-- PostgreSQL database dump
--

-- Dumped from database version 16.4 (Debian 16.4-1.pgdg110+2)
-- Dumped by pg_dump version 16.4 (Debian 16.4-1.pgdg110+2)

SET statement_timeout = 0;
SET lock_timeout = 0;
SET idle_in_transaction_session_timeout = 0;
SET client_encoding = 'UTF8';
SET standard_conforming_strings = on;
SELECT pg_catalog.set_config('search_path', '', false);
SET check_function_bodies = false;
SET xmloption = content;
SET client_min_messages = warning;
SET row_security = off;

--
-- Name: postgis; Type: EXTENSION; Schema: -; Owner: -
--

CREATE EXTENSION IF NOT EXISTS postgis WITH SCHEMA public;


--
-- Name: EXTENSION postgis; Type: COMMENT; Schema: -; Owner: -
--

COMMENT ON EXTENSION postgis IS 'PostGIS geometry and geography spatial types and functions';


SET default_tablespace = '';

SET default_table_access_method = heap;

--
-- Name: appointment; Type: TABLE; Schema: public; Owner: -
--

CREATE TABLE public.appointment (
    appointment_id bigint NOT NULL,
    buyer_id bigint NOT NULL,
    created_at timestamp(6) with time zone NOT NULL,
    listing_id bigint NOT NULL,
    meet_at timestamp(6) with time zone NOT NULL,
    meet_lat numeric(10,7),
    meet_lng numeric(10,7),
    meet_place_text character varying(200),
    notification_time timestamp(6) with time zone,
    reminder_sent_at timestamp(6) with time zone,
    seller_id bigint NOT NULL,
    status character varying(20) NOT NULL,
    trade_prompt_dismissed_at timestamp(6) with time zone,
    trade_prompt_sent_at timestamp(6) with time zone,
    updated_at timestamp(6) with time zone NOT NULL,
    CONSTRAINT appointment_status_check CHECK (((status)::text = ANY (ARRAY[('SCHEDULED'::character varying)::text, ('CANCELED'::character varying)::text, ('DONE'::character varying)::text])))
);


--
-- Name: appointment_appointment_id_seq; Type: SEQUENCE; Schema: public; Owner: -
--

ALTER TABLE public.appointment ALTER COLUMN appointment_id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.appointment_appointment_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);


--
-- Name: chat_message; Type: TABLE; Schema: public; Owner: -
--

CREATE TABLE public.chat_message (
    message_id bigint NOT NULL,
    chat_room_id bigint NOT NULL,
    content text NOT NULL,
    created_at timestamp(6) with time zone NOT NULL,
    sender_id bigint NOT NULL,
    type character varying(255) NOT NULL,
    CONSTRAINT chat_message_type_check CHECK (((type)::text = ANY (ARRAY[('TEXT'::character varying)::text, ('IMAGE'::character varying)::text, ('SYSTEM'::character varying)::text])))
);


--
-- Name: chat_message_message_id_seq; Type: SEQUENCE; Schema: public; Owner: -
--

ALTER TABLE public.chat_message ALTER COLUMN message_id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.chat_message_message_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);


--
-- Name: chat_read; Type: TABLE; Schema: public; Owner: -
--

CREATE TABLE public.chat_read (
    chat_read_id bigint NOT NULL,
    chat_room_id bigint NOT NULL,
    last_read_message_id bigint,
    member_id bigint NOT NULL,
    updated_at timestamp(6) with time zone NOT NULL
);


--
-- Name: chat_read_chat_read_id_seq; Type: SEQUENCE; Schema: public; Owner: -
--

ALTER TABLE public.chat_read ALTER COLUMN chat_read_id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.chat_read_chat_read_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);


--
-- Name: chat_room; Type: TABLE; Schema: public; Owner: -
--

CREATE TABLE public.chat_room (
    chat_room_id bigint NOT NULL,
    created_at timestamp(6) with time zone NOT NULL,
    updated_at timestamp(6) with time zone NOT NULL,
    buyer_id bigint NOT NULL,
    listing_id bigint NOT NULL,
    seller_id bigint NOT NULL,
    status character varying(20) NOT NULL,
    CONSTRAINT chat_room_status_check CHECK (((status)::text = ANY (ARRAY[('ACTIVE'::character varying)::text, ('CLOSED'::character varying)::text])))
);


--
-- Name: chat_room_chat_room_id_seq; Type: SEQUENCE; Schema: public; Owner: -
--

ALTER TABLE public.chat_room ALTER COLUMN chat_room_id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.chat_room_chat_room_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);


--
-- Name: keyword_subscription; Type: TABLE; Schema: public; Owner: -
--

CREATE TABLE public.keyword_subscription (
    subscription_id bigint NOT NULL,
    created_at timestamp(6) with time zone NOT NULL,
    keyword character varying(100) NOT NULL,
    member_id bigint NOT NULL,
    region_id integer
);


--
-- Name: keyword_subscription_subscription_id_seq; Type: SEQUENCE; Schema: public; Owner: -
--

ALTER TABLE public.keyword_subscription ALTER COLUMN subscription_id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.keyword_subscription_subscription_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);


--
-- Name: listing; Type: TABLE; Schema: public; Owner: -
--

CREATE TABLE public.listing (
    listing_id bigint NOT NULL,
    created_at timestamp(6) with time zone NOT NULL,
    updated_at timestamp(6) with time zone NOT NULL,
    buyer_id bigint,
    category_id bigint,
    deleted_at timestamp(6) with time zone,
    description text,
    hope_lat numeric(10,7),
    hope_lng numeric(10,7),
    hope_region_id integer,
    is_hidden boolean,
    is_free boolean,
    price bigint NOT NULL,
    region_id integer,
    reserver_id bigint,
    seller_id bigint NOT NULL,
    status character varying(20) NOT NULL,
    title character varying(200) NOT NULL,
    view_count bigint NOT NULL,
    transaction_type character varying(20),
    origin_lat numeric(10,7),
    origin_lng numeric(10,7),
    origin_region_id integer,
    CONSTRAINT listing_status_check CHECK (((status)::text = ANY (ARRAY[('DRAFT'::character varying)::text, ('PUBLISHED'::character varying)::text, ('RESERVED'::character varying)::text, ('SOLD_OUT'::character varying)::text]))),
    CONSTRAINT listing_transaction_type_check CHECK (((transaction_type)::text = ANY ((ARRAY['SELL'::character varying, 'TRADE'::character varying, 'FREE'::character varying])::text[])))
);


--
-- Name: listing_image; Type: TABLE; Schema: public; Owner: -
--

CREATE TABLE public.listing_image (
    image_id bigint NOT NULL,
    created_at timestamp(6) with time zone NOT NULL,
    image_url character varying(500) NOT NULL,
    sort_order integer NOT NULL,
    listing_id bigint NOT NULL
);


--
-- Name: listing_image_image_id_seq; Type: SEQUENCE; Schema: public; Owner: -
--

ALTER TABLE public.listing_image ALTER COLUMN image_id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.listing_image_image_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);


--
-- Name: listing_listing_id_seq; Type: SEQUENCE; Schema: public; Owner: -
--

ALTER TABLE public.listing ALTER COLUMN listing_id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.listing_listing_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);


--
-- Name: member; Type: TABLE; Schema: public; Owner: -
--

CREATE TABLE public.member (
    member_id bigint NOT NULL,
    created_at timestamp(6) with time zone NOT NULL,
    updated_at timestamp(6) with time zone NOT NULL,
    nickname character varying(50) NOT NULL,
    phone_number character varying(20) NOT NULL,
    profile_image character varying(500),
    status character varying(20) NOT NULL,
    withdrawn_at timestamp(6) with time zone,
    smile_score integer DEFAULT 365 NOT NULL,
    CONSTRAINT member_status_check CHECK (((status)::text = ANY (ARRAY[('ACTIVE'::character varying)::text, ('SUSPENDED'::character varying)::text, ('WITHDRAWN'::character varying)::text])))
);


--
-- Name: member_interest; Type: TABLE; Schema: public; Owner: -
--

CREATE TABLE public.member_interest (
    interest_id bigint NOT NULL,
    listing_id bigint NOT NULL,
    member_id bigint NOT NULL
);


--
-- Name: member_interest_interest_id_seq; Type: SEQUENCE; Schema: public; Owner: -
--

ALTER TABLE public.member_interest ALTER COLUMN interest_id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.member_interest_interest_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);


--
-- Name: member_region; Type: TABLE; Schema: public; Owner: -
--

CREATE TABLE public.member_region (
    member_region_id bigint NOT NULL,
    created_at timestamp(6) with time zone NOT NULL,
    is_primary boolean NOT NULL,
    region_id integer NOT NULL,
    verified_at timestamp(6) with time zone,
    member_id bigint NOT NULL,
    lat numeric(10,7),
    lng numeric(10,7)
);


--
-- Name: member_region_member_region_id_seq; Type: SEQUENCE; Schema: public; Owner: -
--

ALTER TABLE public.member_region ALTER COLUMN member_region_id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.member_region_member_region_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);


--
-- Name: notification; Type: TABLE; Schema: public; Owner: -
--

CREATE TABLE public.notification (
    notification_id bigint NOT NULL,
    created_at timestamp(6) with time zone NOT NULL,
    member_id bigint NOT NULL,
    is_read boolean NOT NULL,
    read_at timestamp(6) with time zone,
    type character varying(30) NOT NULL,
    CONSTRAINT notification_type_check CHECK (((type)::text = ANY (ARRAY[('NEW_CHAT'::character varying)::text, ('LISTING_KEYWORD'::character varying)::text, ('APPOINTMENT_ALARM'::character varying)::text, ('SOLD_OUT'::character varying)::text, ('RESERVATION_CANCELED'::character varying)::text, ('REVIEW_REQUEST'::character varying)::text, ('TRADE_COMPLETE_PROMPT'::character varying)::text])))
);


--
-- Name: notification_notification_id_seq; Type: SEQUENCE; Schema: public; Owner: -
--

ALTER TABLE public.notification ALTER COLUMN notification_id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.notification_notification_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);


--
-- Name: outbox_event; Type: TABLE; Schema: public; Owner: -
--

CREATE TABLE public.outbox_event (
    event_id bigint NOT NULL,
    aggregate_id bigint NOT NULL,
    aggregate_type character varying(50) NOT NULL,
    event_type character varying(50) NOT NULL,
    occurred_at timestamp(6) with time zone NOT NULL,
    payload_json json NOT NULL,
    published_at timestamp(6) with time zone,
    status character varying(20) NOT NULL
);


--
-- Name: outbox_event_event_id_seq; Type: SEQUENCE; Schema: public; Owner: -
--

ALTER TABLE public.outbox_event ALTER COLUMN event_id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.outbox_event_event_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);


--
-- Name: region; Type: TABLE; Schema: public; Owner: -
--

CREATE TABLE public.region (
    id integer NOT NULL,
    adm_cd character varying(8) NOT NULL,
    adm_cd2 character varying(10) NOT NULL,
    adm_nm character varying(50) NOT NULL,
    dongnm character varying(20) NOT NULL,
    geom public.geography(MultiPolygon,4326) NOT NULL,
    sgg character varying(5) NOT NULL,
    sggnm character varying(20) NOT NULL,
    sido character varying(2) NOT NULL,
    sidonm character varying(20) NOT NULL
);


--
-- Name: region_id_seq; Type: SEQUENCE; Schema: public; Owner: -
--

ALTER TABLE public.region ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.region_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);


--
-- Name: review; Type: TABLE; Schema: public; Owner: -
--

CREATE TABLE public.review (
    review_id bigint NOT NULL,
    created_at timestamp(6) with time zone NOT NULL,
    updated_at timestamp(6) with time zone NOT NULL,
    comment text,
    is_seller boolean NOT NULL,
    listing_id bigint NOT NULL,
    rating integer NOT NULL,
    target_id bigint NOT NULL,
    writer_id bigint NOT NULL,
    trade_id bigint NOT NULL
);


--
-- Name: review_review_id_seq; Type: SEQUENCE; Schema: public; Owner: -
--

ALTER TABLE public.review ALTER COLUMN review_id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.review_review_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);


--
-- Name: trade; Type: TABLE; Schema: public; Owner: -
--

CREATE TABLE public.trade (
    trade_id bigint NOT NULL,
    buyer_id bigint NOT NULL,
    completed_at timestamp(6) with time zone,
    created_at timestamp(6) with time zone NOT NULL,
    listing_id bigint NOT NULL,
    price bigint NOT NULL,
    seller_id bigint NOT NULL,
    status character varying(20) NOT NULL,
    updated_at timestamp(6) with time zone NOT NULL,
    CONSTRAINT trade_status_check CHECK (((status)::text = ANY ((ARRAY['CREATED'::character varying, 'COMPLETED'::character varying, 'CANCELED'::character varying])::text[])))
);


--
-- Name: trade_trade_id_seq; Type: SEQUENCE; Schema: public; Owner: -
--

ALTER TABLE public.trade ALTER COLUMN trade_id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.trade_trade_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);


--
-- Name: appointment appointment_pkey; Type: CONSTRAINT; Schema: public; Owner: -
--

ALTER TABLE ONLY public.appointment
    ADD CONSTRAINT appointment_pkey PRIMARY KEY (appointment_id);


--
-- Name: chat_message chat_message_pkey; Type: CONSTRAINT; Schema: public; Owner: -
--

ALTER TABLE ONLY public.chat_message
    ADD CONSTRAINT chat_message_pkey PRIMARY KEY (message_id);


--
-- Name: chat_read chat_read_pkey; Type: CONSTRAINT; Schema: public; Owner: -
--

ALTER TABLE ONLY public.chat_read
    ADD CONSTRAINT chat_read_pkey PRIMARY KEY (chat_read_id);


--
-- Name: chat_room chat_room_pkey; Type: CONSTRAINT; Schema: public; Owner: -
--

ALTER TABLE ONLY public.chat_room
    ADD CONSTRAINT chat_room_pkey PRIMARY KEY (chat_room_id);


--
-- Name: keyword_subscription keyword_subscription_pkey; Type: CONSTRAINT; Schema: public; Owner: -
--

ALTER TABLE ONLY public.keyword_subscription
    ADD CONSTRAINT keyword_subscription_pkey PRIMARY KEY (subscription_id);


--
-- Name: listing_image listing_image_pkey; Type: CONSTRAINT; Schema: public; Owner: -
--

ALTER TABLE ONLY public.listing_image
    ADD CONSTRAINT listing_image_pkey PRIMARY KEY (image_id);


--
-- Name: listing listing_pkey; Type: CONSTRAINT; Schema: public; Owner: -
--

ALTER TABLE ONLY public.listing
    ADD CONSTRAINT listing_pkey PRIMARY KEY (listing_id);


--
-- Name: member_interest member_interest_pkey; Type: CONSTRAINT; Schema: public; Owner: -
--

ALTER TABLE ONLY public.member_interest
    ADD CONSTRAINT member_interest_pkey PRIMARY KEY (interest_id);


--
-- Name: member member_pkey; Type: CONSTRAINT; Schema: public; Owner: -
--

ALTER TABLE ONLY public.member
    ADD CONSTRAINT member_pkey PRIMARY KEY (member_id);


--
-- Name: member_region member_region_pkey; Type: CONSTRAINT; Schema: public; Owner: -
--

ALTER TABLE ONLY public.member_region
    ADD CONSTRAINT member_region_pkey PRIMARY KEY (member_region_id);


--
-- Name: notification notification_pkey; Type: CONSTRAINT; Schema: public; Owner: -
--

ALTER TABLE ONLY public.notification
    ADD CONSTRAINT notification_pkey PRIMARY KEY (notification_id);


--
-- Name: outbox_event outbox_event_pkey; Type: CONSTRAINT; Schema: public; Owner: -
--

ALTER TABLE ONLY public.outbox_event
    ADD CONSTRAINT outbox_event_pkey PRIMARY KEY (event_id);


--
-- Name: region region_pkey; Type: CONSTRAINT; Schema: public; Owner: -
--

ALTER TABLE ONLY public.region
    ADD CONSTRAINT region_pkey PRIMARY KEY (id);


--
-- Name: review review_pkey; Type: CONSTRAINT; Schema: public; Owner: -
--

ALTER TABLE ONLY public.review
    ADD CONSTRAINT review_pkey PRIMARY KEY (review_id);


--
-- Name: trade trade_pkey; Type: CONSTRAINT; Schema: public; Owner: -
--

ALTER TABLE ONLY public.trade
    ADD CONSTRAINT trade_pkey PRIMARY KEY (trade_id);


--
-- Name: member ukn2qryhkfoqeel6njfhrcq6k7u; Type: CONSTRAINT; Schema: public; Owner: -
--

ALTER TABLE ONLY public.member
    ADD CONSTRAINT ukn2qryhkfoqeel6njfhrcq6k7u UNIQUE (phone_number);


--
-- Name: member_interest fk5kx0pu686yru7e3u31bl1epya; Type: FK CONSTRAINT; Schema: public; Owner: -
--

ALTER TABLE ONLY public.member_interest
    ADD CONSTRAINT fk5kx0pu686yru7e3u31bl1epya FOREIGN KEY (member_id) REFERENCES public.member(member_id);


--
-- Name: listing_image fk7gbm1gj1jlw54t8igv7lhx3b0; Type: FK CONSTRAINT; Schema: public; Owner: -
--

ALTER TABLE ONLY public.listing_image
    ADD CONSTRAINT fk7gbm1gj1jlw54t8igv7lhx3b0 FOREIGN KEY (listing_id) REFERENCES public.listing(listing_id);


--
-- Name: member_region fkidxtr6gj34jomux2hl6ndhh4o; Type: FK CONSTRAINT; Schema: public; Owner: -
--

ALTER TABLE ONLY public.member_region
    ADD CONSTRAINT fkidxtr6gj34jomux2hl6ndhh4o FOREIGN KEY (member_id) REFERENCES public.member(member_id);


--
-- PostgreSQL database dump complete
--

